--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,10 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     implementation('org.springframework:spring-webmvc:5.3.23')
     implementation('org.thymeleaf:thymeleaf-spring5:3.0.15.RELEASE')
+    implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.23'
+    implementation group: 'org.springframework', name: 'spring-orm', version: '5.3.23'
     implementation('org.hibernate:hibernate-core:5.4.3.Final')
     implementation('mysql:mysql-connector-java:8.0.30')
-
 }
 
 test {
